# KernelMatrix

./: CMakeLists.txt  README.md
cmake/: KernelMatrixConfig.cmake.in
config/: KernelMatrix_config.h.in
examples/: CMakeLists.txt  kernel_matrix.cpp
include/: KernelMatrixProject.hpp  kernel.hpp  kernel_matrix.hpp  km_utilities.hpp
src/: kernel_matrix.cpp  km_utilities.cpp
